--- a/AluraTeste/AluraTeste/MainPage.xaml
+++ b/AluraTeste/AluraTeste/MainPage.xaml
@@ -10,7 +10,7 @@
 
       <Entry />
     
-      <Stepper Minimum="10" Maximum="1000"></Stepper>
+      <Stepper Minimum="10" Maximum="1000git "></Stepper>
       
       <Button Text="Salvar"></Button>
   
